--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <h1>HOLA</h1>
-    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat rerum pariatur iste nemo quos praesentium alias nostrum dolore magni? Provident magni incidunt harum officiis consequatur ad temporibus laboriosam hic illum! </p>
+    <button id="button">CLICK ME</button>
+    <button id="button2">CLICK ME</button>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
